# kirdi

./: .gitignore  CMakeLists.txt  Cargo.toml  install.sh
.klitor/explores/: client-packet-flow.md  tun-nat-setup.md  vpn-server-packet-flow.md
crates/kirdi-ffi/: Cargo.toml
crates/kirdi-ffi/src/: lib.rs
crates/kirdi-sys/: Cargo.toml  build.rs
crates/kirdi-sys/src/: lib.rs
gui/: package-lock.json  package.json  vite.config.ts
gui/src/: App.tsx  index.css
gui/src/components/: ConnectButton.tsx  ServerInfo.tsx  SettingsPanel.tsx  StatusBar.tsx
gui/src/hooks/: useVpn.ts
gui/src/types/: vpn.ts
include/kirdi/: kirdi.h  version.hpp
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  vpn.rs
src/client/: client.cpp  client.hpp  main.cpp
src/common/: config.cpp  config.hpp  crypto.cpp  crypto.hpp  logger.cpp  logger.hpp  protocol.cpp  protocol.hpp
src/gui/: gui_bridge.cpp  gui_bridge.hpp  gui_controller.hpp  gui_controller.mm  main.cpp
src/libkirdi/: kirdi.cpp
src/server/: main.cpp  server.cpp  server.hpp  session.cpp  session.hpp
src/transport/: ws_transport.cpp  ws_transport.hpp
src/tun/: tun_interface.cpp  tun_interface.hpp  tun_linux.cpp  tun_linux.hpp  tun_macos.cpp  tun_macos.hpp  tun_windows.cpp  tun_windows.hpp
tests/: test_config.cpp  test_protocol.cpp
tests/integration/: setup_netns.sh  test_tunnel.sh
