[package]
name = "kirdi-app"
version = "0.1.0"
edition = "2021"
description = "kirdi VPN — L3 VPN Tunnel (Tauri desktop app)"
default-run = "kirdi-app"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
kirdi-ffi = { path = "../crates/kirdi-ffi" }
kirdi-sys = { path = "../crates/kirdi-sys" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
libc = "0.2"
